--- a/ToDo
+++ b/ToDo
@@ -58,29 +58,30 @@ suggestions and comments are also encouraged.
 
 - add support for specifying size and interval units other than KB & hrs.
 
-- historical log file suffixes (suggested by Andy Doran <ad@netbsd.org>)
-  (i.e. ".YYYYMMDDHHMMSS" or ".YYYY-MM-DD.HH:MM:SS" or whatever)
+- implement an option for historical log file suffixes (suggested by
+  Andy Doran <ad@netbsd.org>) (i.e. ".YYYYMMDDHHMMSS" or
+  ".YYYY-MM-DD.HH:MM:SS" or whatever)
 
-  FreeBSD will likely use Toshihisa Eto <eto@clave.gr.jp> patch with the
-  format ".YYYMMDD-NN":
+  FreeBSD may someday use the Toshihisa Eto <eto@clave.gr.jp> patch with
+  the format ".YYYMMDD-NN":
 
     http://www.clave.gr.jp/~eto/software/newsyslog/newsyslog.diff.gz
 
-- think about FreeBSD's "archive to directory" (-a archdir) option (1.26)
+- implement FreeBSD's CE_SIGNALGROUP (send signal to negated PID).
 
-- add a '--with-bzip2' configure option
+- add a '--with-bzip2' configure option (FreeBSD uses 'J' as the flag to
+  indicate bzip2 should be used to compress the log)
 
 - add a '--with-compress_options=options' option too
 
   --with-compress_options=options pass these additional options to
                                   compress (or gzip or bzip2)
 
-- fix str2sig() compatability function so that it can recognise
-  alternative signal names, not just the "official" ones from
-  sys_signame.  (there's no easy way to do this except by creating a
-  complete new table of names with explicit number mappings, instead of
-  using the index as the implicit mapping, and this table will have to
-  be created at compile-time...)
+- think about FreeBSD's 'W' (wait) flag to wait for compression jobs for
+  a given entry.
+
+- think (but not too hard, this is ugly) about supporting the FreeBSD
+  'G' (glob(3)) flag.  Yuck.  But it would help some RADIUS daemons....
 
 - think about OpenBSD's "monitor" feature:  an 'M' in the flag field
   which says the next field is an account name to receive an e-mail
@@ -90,4 +91,12 @@ suggestions and comments are also encouraged.
   pid_file field when the signal number is specified '-1' to specify a
   command to run instead of sending a signal.
 
-#ident	"@(#)newsyslog:$Name:  $:$Id: ToDo,v 1.11 2002/05/10 17:45:08 woods Exp $"
+- consider mentioning cronolog (good for things that can pipe to logs,
+  as well as possibly a post-processor for archiving logs):
+
+	http://www.cronolog.org/
+
+  (there, that's done! ;-)
+
+
+#ident	"@(#)newsyslog:$Name:  $:$Id: ToDo,v 1.12 2003/07/08 18:50:59 woods Exp $"
