--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,18 @@ Please send bug reports to bugs@robohack.planix.com
 
 * User-visible changes since newsyslog-1.1.
 
+- fixed a bug that made very large log files impossible to find and roll
+  over when using size as the only criteria (verbose output said simply
+  "does not exist")
+
+- improved backward compatability for some *BSD newsyslog.conf files.
+
+- add '-q' (for quiet) option.
+
+- add special '-U' option, for NetBSD system build support.
+
+- correct a bug that was causing missing log files to not be created
+  even when '-F' was used.
 
 
 * User-visible changes since newsyslog-1.0.103.
@@ -193,4 +205,4 @@ from being rolled over unnecessarily).
 - improved documentation
 
 
-#ident	"@(#)newsyslog:$Name:  $:$Id: NEWS,v 1.25 2003/07/08 20:02:56 woods Exp $"
+#ident	"@(#)newsyslog:$Name:  $:$Id: NEWS,v 1.26 2006/09/29 19:57:41 woods Exp $"
