--- a/NEWS
+++ b/NEWS
@@ -41,6 +41,11 @@ Please send bug reports to bugs@robohack.planix.com
 - fixed another bug that was causing missing log files to not be created
   even when '-F' was used.
 
+- trimtime day-of-the-month numbers (Mxx) that are larger than the
+  number of days for the current month now only generate a warning and
+  are treated as the number of days in the current month (but maybe it
+  should warn about any number greater than 28 all the time?).
+
 
 * User-visible changes since newsyslog-1.0.103.
 
@@ -226,4 +231,4 @@ from being rolled over unnecessarily).
 - improved documentation
 
 
-#ident	"@(#)newsyslog:$Name:  $:$Id: NEWS,v 1.28 2009/06/13 17:04:18 woods Exp $"
+#ident	"@(#)newsyslog:$Name:  $:$Id: NEWS,v 1.29 2009/07/16 00:33:18 woods Exp $"
