--- a/README
+++ b/README
@@ -197,4 +197,4 @@ or:
 						<woods-newsyslog@weird.com>
 
 
-#ident	"@(#)newsyslog:$Name:  $:$Id: README,v 1.15 2003/07/08 18:48:40 woods Exp $"
+#ident	"@(#)newsyslog:README:$Format:%D:%ci:%cN:%h$"
