add a robohack address too

--- a/README
+++ b/README
@@ -194,6 +194,7 @@ or:
 -- 
 						Greg A. Woods
 						<woods-newsyslog@planix.com>
+						<woods-newsyslog@robohack.ca>
 						<woods-newsyslog@weird.com>
 
 
